--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta name="robots" content="noindex"/>
 <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
